--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dependencies": {
         "vue-router": "^3.4.9",
         "vuetify": "^2.4.0",
-        "vuetify-loader": "^1.5.0"
+        "vuetify-loader": "^1.5.0",
+        "vuex": "^3.6.0"
     }
 }
